--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -7,13 +7,13 @@ navigation history that also transitions its views in and out.
   <ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
     <!-- Dashboard Tab -->
-    <ion-tab title="Login" icon-off="ion-ios-pulse" icon-on="ion-ios-pulse-strong" href="#/tab/login">
+    <ion-tab title="Login" icon-off="ion-ios-pulse" icon-on="ion-ios-pulse-strong" href="#/login">
       <ion-nav-view name="tab-login"></ion-nav-view>
     </ion-tab>
 
     <!-- Chats Tab -->
     <ion-tab
-      title="Orders" icon-off="ion-ios-chatboxes-outline" icon-on="ion-ios-chatboxes" href="#/tab/orders">
+      title="Orders" icon-off="ion-ios-chatboxes-outline" icon-on="ion-ios-chatboxes" href="#/orders">
       <ion-nav-view name="tab-orders"></ion-nav-view>
     </ion-tab>
 
