--- a/www/templates/tab-orders.html
+++ b/www/templates/tab-orders.html
@@ -16,8 +16,8 @@
       <div class="item item-divider">
         <ion-item ng-click="getDetails(order)">
           <ul>
-            <li>orderName: {{order.user.first_name}} {{order.user.last_name}}</li>
-            <li>orderNumber: {{order.user.number}}</li>
+            <li>Name: {{order.user.first_name}} {{order.user.last_name}}</li>
+            <li>Number: {{order.user.number}}</li>
             <li>Address:  {{order.address.address_line1}}</li>
             <li>Locality: {{order.address.locality}}</li>
             <li>City:  {{order.address.city}}</li>
