--- a/www/templates/tab-orders.html
+++ b/www/templates/tab-orders.html
@@ -25,12 +25,31 @@
           </ul>
         </ion-item>
         <ion-item ng-if="order.status != 'delivered'">
-          <button class="button button-positive" ng-click="showPopup(order)">
+          <div class="row">
+          <button class="button button-positive col col-50" ng-click="showPopup(order)">
             Mark Deliver
           </button>
-          <button class="button button-positive" ng-click="showDirections(order.address.locality, order.address.city)">
+          <button class="button button-positive col col-50" ng-click="showDirections(order.address.locality, order.address.city)">
             Start Route
           </button>
+          </div>
+          <div class="row">
+          <button class="button button-assertive col col-50" ng-click="">
+            Cancel Order
+          </button>
+          <button class="button button-assertive col col-50" ng-click="recieverInfo()">
+            Reciever Info
+          </button>
+          </div>
+          <label class="item-input">
+            <div class="input-label col col-50" style="width:0px;font-weight: 600;">
+              Payment Mode
+            </div>
+            <select class="col col-50">
+              <option>Cash</option>
+              <option >Credit</option>
+            </select>
+          </label>
         </ion-item>
         <ion-item ng-if="order.status == 'delivered'">
           <button class="button button-danger">
