--- a/www/templates/tab-orders.html
+++ b/www/templates/tab-orders.html
@@ -24,9 +24,9 @@
             <li>PinCode:  {{order.address.pin_code}}</li>
           </ul>
         </ion-item>
-        <ion-item ng-if="order.status != 'delivered'">
+        <ion-item ng-if="order.status != 'delivered'  && order.status != 'cancel'">
           <div class="row">
-          <button class="button button-positive col col-50" ng-click="showPopup(order)">
+          <button class="button button-positive col col-50" ng-click="markDeliver(order)">
             Mark Deliver
           </button>
           <button class="button button-positive col col-50" ng-click="showDirections(order.address.locality, order.address.city)">
@@ -34,26 +34,23 @@
           </button>
           </div>
           <div class="row">
-          <button class="button button-assertive col col-50" ng-click="">
+          <button class="button button-assertive col col-50" ng-click="cancelOrder(order)">
             Cancel Order
           </button>
           <button class="button button-assertive col col-50" ng-click="recieverInfo()">
             Reciever Info
           </button>
           </div>
-          <label class="item-input">
-            <div class="input-label col col-50" style="width:0px;font-weight: 600;">
-              Payment Mode
-            </div>
-            <select class="col col-50">
-              <option>Cash</option>
-              <option >Credit</option>
-            </select>
-          </label>
         </ion-item>
         <ion-item ng-if="order.status == 'delivered'">
           <button class="button button-danger">
             Delivered
+          </button>
+        </ion-item>
+
+        <ion-item ng-if="order.status == 'cancel'">
+          <button class="button button-balanced">
+            Order Is Canceled
           </button>
         </ion-item>
       </div>
