--- a/www/templates/tab-orders.html
+++ b/www/templates/tab-orders.html
@@ -37,7 +37,7 @@
           <button class="button button-assertive col col-50" ng-click="cancelOrder(order)">
             Cancel Order
           </button>
-          <button class="button button-assertive col col-50" ng-click="recieverInfo()">
+          <button class="button button-assertive col col-50" ng-click="recieverInfo(order)">
             Reciever Info
           </button>
           </div>
